--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,8 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
-      id-token: write
+      id-token: writepermissions:
+      packages: write
 
     steps:
     - name: Checkout
