--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -41,11 +41,13 @@ spec:
             name: dev-mem
           image: {{ .Values.image.repository }}/{{ .Chart.Name }}:{{ .Values.image.tag }}-{{ .Values.image.os }}-{{ .Values.image.arch }}
           env:
-            name: {{ .Values.secret.env }}
-            valueFrom:
-              secretKeyRef:
-                key: {{ .Values.secret.key }}
-                name: {{ .Values.secret.name }}
+            {{- range .Values.secret }}
+            - name: {{ .env }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .name }}
+                  key: {{ .key }}
+           
           # - name: SLACK_CHANNEL_ID
           #   valueFrom:
           #     secretKeyRef:
