Refactor environment variable handling in deployment.yaml
Update secret values in values.yaml

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -13,18 +13,12 @@ image:
   parameter: go
 
 secret:
-  secret1:  
-    name: "ibot"
+  - name: "ibot"
     env: "SLACK_AUTH_TOKEN"
-    key: "auth-token"
-  secret2:
-    name: "ibot-channel"
+    key: "token"
+  - name: "ibot-channel"
     env: "SLACK_CHANNEL_ID"
     key: "channel-id"
-  secret3:
-    name: "ibot-app"
-    env: "SLACK_APP_TOKEN"
-    key: "app-token"
 securityContext:
   privileged: true
 
