--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -41,15 +41,10 @@ spec:
             name: dev-mem
           image: {{ .Values.image.repository }}/{{ .Chart.Name }}:{{ .Values.image.tag }}-{{ .Values.image.os }}-{{ .Values.image.arch }}
           env:
-            {{- range .Values.secret }}
+          {{- range .Values.secret }}
             - name: {{ .env }}
               valueFrom:
                 secretKeyRef:
                   name: {{ .name }}
                   key: {{ .key }}
-           
-          # - name: SLACK_CHANNEL_ID
-          #   valueFrom:
-          #     secretKeyRef:
-          #       key: {{ .Values.secret.key }}
-          #       name: {{ .Values.secret.name }}
+          {{- end }}
