--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -39,7 +39,7 @@ spec:
           volumeMounts:
           - mountPath: /dev/mem
             name: dev-mem
-          image: {{ .Values.image.repository }}/{{ .Chart.Name }}:{{ .Values.image.tag }}-{{ .Values.image.os }}-{{ .Values.image.arch }}
+          image: {{ .Values.image.repository }}/{{ .Chart.Name }}:{{ .Values.image.tag }}
           env:
             {{- range .Values.secret }}
               - name: {{ .env }}
