--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,7 +66,7 @@ jobs:
         git commit -am "update version $VERSION"
         git push -f
 
-  qa:
+  push:
     name: DEV-QA
     needs: helm
     runs-on: ubuntu-latest
@@ -74,10 +74,12 @@ jobs:
       contents: write
       pull-requests: write
 
+    steps:
     - uses: actions/checkout@v3
       with:
         persist-credentials: false
         fetch-depth: 0
+        
     - uses: GuillaumeFalourd/git-commit-push@v1.3
       with:
         email: github-actions@github.com
