--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -85,7 +85,8 @@ jobs:
         email: github-actions@github.com
         name: github-actions
         commit_message: "Update version $VERSION"
+        remote_repository: https://github.com/k3ilona/publisher-slack-bot.git 
         target_branch: qa
-        files: ./
+        files: .
         access_token: ${{ secrets.GITHUB_TOKEN }}
         force: true
