--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -39,12 +39,15 @@ spec:
           volumeMounts:
           - mountPath: /dev/mem
             name: dev-mem
-          image: {{ .Values.image.repository }}/{{ .Chart.Name }}:{{ .Values.image.tag }}
+          image: {{ .Values.image.repository }}/{{ .Chart.Name }}:{{ .Values.image.tag }}-{{ .Values.image.os }}-{{ .Values.image.arch }}
           env:
-            {{- range .Values.secret }}
-              - name: {{ .env }}
-                valueFrom:
-                  secretKeyRef:
-                    name: {{ .name }}
-                    key: {{ .key }}
-            {{- end }}
+            name: {{ .Values.secret.env }}
+            valueFrom:
+              secretKeyRef:
+                key: {{ .Values.secret.key }}
+                name: {{ .Values.secret.name }}
+          # - name: SLACK_CHANNEL_ID
+          #   valueFrom:
+          #     secretKeyRef:
+          #       key: {{ .Values.secret.key }}
+          #       name: {{ .Values.secret.name }}
