--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,38 +37,38 @@ jobs:
     - name: Clean
       run: make clean
       
-  helm:
-    name: DEV-HELM
-    needs: ci
-    runs-on: ubuntu-latest
+  # helm:
+  #   name: DEV-HELM
+  #   needs: ci
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+  #   steps:
+  #   - name: Checkout
+  #     uses: actions/checkout@v4
+  #     with:
+  #       fetch-depth: 0
 
-    - name: Define tag
-      run: echo "TAG=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
+  #   - name: Define tag
+  #     run: echo "TAG=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
 
-    - name: Define version
-      run: echo "VERSION=$TAG-${{ github.ref_name }}-$(git rev-parse --short HEAD)-$(date +%s)" >> $GITHUB_ENV
+  #   - name: Define version
+  #     run: echo "VERSION=$TAG-${{ github.ref_name }}-$(git rev-parse --short HEAD)-$(date +%s)" >> $GITHUB_ENV
 
-    - uses: mikefarah/yq@master
-      with:
-        cmd: |
-          yq -i '.image.tag = strenv(VERSION)' helm/values.yaml 
-          yq -i '.appVersion = strenv(TAG)' helm/Chart.yaml
+  #   - uses: mikefarah/yq@master
+  #     with:
+  #       cmd: |
+  #         yq -i '.image.tag = strenv(VERSION)' helm/values.yaml 
+  #         yq -i '.appVersion = strenv(TAG)' helm/Chart.yaml
 
-    - run: |
-        git config user.name github-actions
-        git config user.email github-actions@github.com
-        git commit -am "update version $VERSION"
-        git push -f
+  #   - run: |
+  #       git config user.name github-actions
+  #       git config user.email github-actions@github.com
+  #       git commit -am "update version $VERSION"
+  #       git push -f
 
   push:
     name: DEV-QA
-    needs: helm
+    needs: ci
     runs-on: ubuntu-latest
     permissions:
       contents: write
